Fix list text overflow

--- a/src/components/map/style2.less
+++ b/src/components/map/style2.less
@@ -69,7 +69,8 @@
 //Styles each item in the list
 .recs li{
     color: #CCD4E1;
-    height: 30px;
+    height: 28px;
+    overflow-x:hidden;
     background-color:#4a6bb9;
     list-style-type: none;
     margin-bottom: 5px;
@@ -95,7 +96,7 @@
 //Styles each item in the list
 .recs2 li{
     color: #CCD4E1;
-    height: 30px;
+    height: 28px;
     background-color:#4a6bb9;
     list-style-type: none;
     margin-bottom: 5px;
